--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE <!DOCTYPE html>
+
+<!DOCTYPE <!DOCTYscripPE html>
 <html>
 
 <head>
@@ -11,7 +12,28 @@
 </head>
 
 <body>
-    <canvas id="c" tabindex="0"></canvas>
+    <p> .</p>
+    <canvas id="c" width="600" height="600"></canvas>
+    <script id="vertex-shader-2d" type="notjs">
+        attribute vec2 position;
+        attribute vec3 color;
+        varying vec3 vColor;
+        
+        void main() {
+            gl_Position = vec4(position,0.0,1.0);
+            gl_PointSize = 5.0;
+            vColor = color;
+        }
+      </script>
+    <script id="fragment-shader-2d" type="notjs">
+        precision mediump float;
+
+        varying vec3 vColor;        
+
+        void main() {
+            gl_FragColor = vec4(vColor,1.0);
+        }
+      </script>
 </body>
 
 </html>
